--- a/src/middleware/packages/crypto/package.json
+++ b/src/middleware/packages/crypto/package.json
@@ -10,18 +10,13 @@
     "@digitalbazaar/ed25519-multikey": "^1.3.0",
     "@digitalbazaar/ed25519-signature-2020": "^5.4.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^4.2.0",
-    "@digitalbazaar/eddsa-2022-cryptosuite": "^1.0.0",
     "@digitalbazaar/eddsa-rdfc-2022-cryptosuite": "^1.2.0",
     "@digitalbazaar/vc": "^7.1.0",
     "@rdfjs/data-model": "^1.3.4",
-    "@semapps/ldp": "1.0.9",
-    "@semapps/middlewares": "1.0.9",
-    "@semapps/mime-types": "1.0.9",
-    "@semapps/ontologies": "1.0.9",
-    "@veramo/core": "^6.0.0",
-    "@veramo/credential-w3c": "^6.0.0",
-    "@web5/credentials": "^1.1.3",
-    "@web5/crypto": "^1.0.6",
+    "@semapps/ldp": "^1.0.10",
+    "@semapps/middlewares": "^1.0.10",
+    "@semapps/mime-types": "^1.0.10",
+    "@semapps/ontologies": "^1.0.10",
     "crypto-ld": "^7.0.0",
     "http-signature": "^1.3.4",
     "http-signature-header": "^1.3.1",
